HFP-2348 Fix iframe spacing issues in IE11 causing resize loop

--- a/src/scripts/components/EditorOverlay.scss
+++ b/src/scripts/components/EditorOverlay.scss
@@ -9,12 +9,12 @@
   max-height: 90%;
   height: 90%;
   position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%,-50%);
+  right: 50%;
+  bottom: 50%;
+  transform: translate(50%,50%);
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
   font-size: 0.7rem;
-  z-index:61;
+  z-index: 61;
   display: flex;
   flex-direction: column;
 
